# C-CommonCodes

./: README.md
MicroServer/: radme.md
MicroServer/include/: BaseMsg.h  CommonTools.h  GameLogic.h  GameServerNode.h  ReconnectService.h  RedisServer.h  Runnable.h  Singleton.h  ThreadPoo.hpp  ThreadPool.h  WorkThreadLogic.h  msgqueue.h  work_thread.h
MicroServer/lib/include/: MqMsgManager.h  cJSON.h
MicroServer/lib/include/Common/: Common.h
MicroServer/lib/include/Epoll/: EPOLLConnection.h  EPOLLContext.h  EPOLLNet.h  Epoll.h
MicroServer/lib/include/Game/: GameProvider.h  NetGame.h  NetMessage.h  PlayerNode.h  Reconnect.h
MicroServer/lib/include/aes/: aes.h  aeslib.h  aesopt.h  getopts.h  lutil.h  uitypes.h  version.h
MicroServer/src/: CommonTools.cpp  GameLogic.cpp  ReconnectService.cpp  RedisServer.cpp  WorkThreadLogic.cpp  main.cpp  makefile  msgqueue.cpp  work_thread.cpp
ReadJson/: TestMain.cpp  makefile  test.json
ReadXml/: make.sh
ReadXml/TinyXml/: makefile  tinyxmlparser.cpp
ReadXml/src/: CMakeLists.txt  TestMain.cpp
写日志/: IniFile.cpp  IniFile.h  LogCls.cpp  LogCls.h  TestMain.cpp  log.cpp  log.h  make.sh  readme.md
线程安全的单例模式/: ReadMe.md  Singleton.h  TestClass.hpp  TestMain.cpp  make.sh
读写文件/: Readme.md  TestMain.cpp  make.sh  test.cfg
